--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -24,12 +24,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
-  /*display: flex;*/
+  /*display: none;*/
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /*min-width: 100%;*/
+  /*min-height: 100%;*/
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -42,9 +44,10 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  /*padding: 2rem;*/
   text-align: center;
 }
 
@@ -86,7 +89,7 @@ ul#menu {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #d8dadc;
 }
 
 li {
@@ -97,7 +100,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20% 20%;
     text-decoration: none;
 }
 
