Tabs component is added and the menu is changed -- the functionality is not implemented yet

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -89,7 +89,7 @@ ul#menu {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #d8dadc;
+    background-color: white;
 }
 
 li {
