all tabs are working and the style is changed

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,27 +1,30 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: #4a4a56;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #4a4a56;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --wue-blue: #063d79;
+  --light-black-blue: #4a4a56;
+  --light-gray: #adadad;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: whitesmoke;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: whitesmoke;
 }
 
 html, body {
@@ -63,7 +66,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: whitesmoke;
 }
 button:focus,
 button:focus-visible {
@@ -72,11 +75,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: whitesmoke;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: whitesmoke;
   }
   button {
     background-color: #f9f9f9;
@@ -106,7 +109,7 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: rgb(41, 87, 44);
+    background-color: whitesmoke;
 }
 
 
