experiment page dropdown select menu is added

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -113,5 +113,5 @@ li a:hover {
     background-color: whitesmoke;
 }
 hr {
-  background-color: var(--lightgray);
+  background-color: whitesmoke;
 }
